--- a/_data/team.yml
+++ b/_data/team.yml
@@ -33,7 +33,7 @@ team:
 
   - name: "Jordan Giannasi"
     icon: "fa-user"
-    role: "Funding Officer"
+    role: "Equipment Officer"
     qualifications: "Ocean Diver"
     course: ""
     description: |
@@ -47,13 +47,12 @@ team:
     description: |
       Cameron makes sure the club is well funded and that we have the equipment we need to run training and trips.
 
-  - name: "Meg Taylor"
+  - name: "Tom Ashdown"
     icon: "fa-user"
-    role: "Welfare Officer"
+    role: "Social and Social Media Officer"
     qualifications: "Ocean Diver"
-    course: ""
     description: |
-      Meg is responsible for the welfare of all members.
+      Tom is responsible for organising socials and keeping our social media up to date.
 
   - name: "Drew Morgan"
     icon: "fa-user"
@@ -63,9 +62,10 @@ team:
     description: |
       Drew works with the diving officer to ensure that training goes smoothly.
 
-  - name: "Tom Ashdown"
+  - name: "Meg Taylor"
     icon: "fa-user"
-    role: "Social and Social Media Officer"
+    role: "Welfare Officer"
     qualifications: "Ocean Diver"
+    course: ""
     description: |
-      Tom is responsible for organising socials and keeping our social media up to date.
+      Meg is responsible for the welfare of all members.
